--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.min.js"></script> -->
 
   <!-- <script defer src="./js/youtube.js"></script> -->
-  <script defer src="./js/main.js"></script>
   <script defer src="./js/youtube.js"></script>
+  <script defer src="./js/common.js"></script>
+  <script defer src="./js/main.js"></script>
   
 </head>
 
